# Table

./: .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MarkItUp集成方案.md  MarkItUp集成计划-完整版.md  PYTHON_MIGRATION.md  README.md  SECURITY.md  design-system.md  index.html  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  server-setup-notes.md  tailwind.config.js  test_embedding.md  tsconfig.frontend-tests.json  tsconfig.server.json  webpack.config.js  交接文档.md  大模型发展历程.txt  技术架构文档-研发版.md  技术架构文档.md  架构重构实施方案.md  深度问题挖掘报告.md  设计缺陷分析.md  项目文件夹结构说明.md  项目致命问题分析报告.md
ocr-service/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
ocr-service/tests/: test_ocr_service.py
python-backend/: README.md  pyproject.toml
python-backend/app/: dependencies.py  main.py
python-backend/app/core/: csrf.py  (+6 more)
python-backend/tests/: agent_stream_test_helpers.py  conftest.py  test_agent_api.py  test_agent_corpus_rag.py  test_agent_integration.py  test_agent_long_term_memory.py  test_agent_memory.py  test_agent_rag_tools.py  test_agent_registry.py  test_agent_stream_confirmations.py  test_agent_stream_execution.py  test_agent_stream_service.py  test_api_urls.py  test_auth_api.py  test_conventions_backend_boundaries.py  test_conventions_config.py  test_conventions_docs.py  test_conventions_errors.py  test_conventions_frontend_structure.py  test_conventions_routes.py  test_finance_schemas.py  test_knowledge_rag_api.py  test_knowledge_rag_describe_phase.py  test_knowledge_rag_embeddings.py  test_knowledge_rag_indexing.py  test_knowledge_rag_integration.py  test_knowledge_rag_mmr.py  test_knowledge_rag_pdf.py  test_knowledge_rag_query_preprocessor.py  test_knowledge_rag_reranker.py  test_knowledge_rag_schemas.py  test_knowledge_rag_search.py  test_knowledge_rag_services.py  test_knowledge_rag_vision.py  test_knowledge_schemas.py  test_maintenance_api.py  test_pin.py  test_provider_bootstrap.py  test_provider_crypto.py  test_providers_api.py  (+4 more)
(+854 files in other folders)
