[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table-ocr-service"
version = "0.1.0"
description = "OCR service for Table"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.100,<1",
  "paddleocr>=2.7,<3",
  "paddlepaddle>=2.5,<3",
  "pydantic>=2.0,<3",
  "pymupdf>=1.23,<2",
  "python-multipart>=0.0.6,<1",
  "uvicorn>=0.23,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["ocr_service"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
