[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table-ocr-service"
version = "0.2.0"
description = "OCR service for Table"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.100,<1",
  "httpx>=0.27,<1",
  "paddleocr>=2.7,<3",
  "paddlepaddle>=2.5,<3",
  "pydantic>=2.0,<3",
  "pytest>=8.2,<9",
  "pymupdf>=1.23,<2",
  "pytest-asyncio>=0.23,<1",
  "python-multipart>=0.0.6,<1",
  "uvicorn>=0.23,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["ocr_service"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
