[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "table-python-backend"
version = "0.1.0"
description = "Incremental Python backend for Table"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "asyncpg>=0.30,<1",
  "cryptography>=45,<46",
  "fastapi>=0.115,<1",
  "greenlet>=3.0,<4",
  "httpx>=0.27,<1",
  "langgraph>=1.0,<2",
  "pypdf>=5,<6",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.3,<3",
  "python-multipart>=0.0.9,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.30,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
